--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  
+  
+    button:hover {
+      @apply bg-gray-900;
+    }
+  }
+  
